syntax = "proto3";

package data;


message file_binary{
  bytes content = 1;
}


message file_single{
    file_binary binary = 1;
    uint64 parent = 2; //parent commit's handle
}